# ssh-keydb

./: .gitignore  MANIFEST.in  clean.sh  container.py  model.py  options.py  pyproject.toml  python-ssh-keydb-1.0-server.spec  python-ssh-keydb-server.spec  setup.cfg  setup.py  ssh-keydb  ssh-keydb-client-setup  ssh-keydb-client.spec  ssh-keydb-server.spec  ssh-keydb.conf  ssh_keydb.py
packaging/: ssh-keydb-client.spec  ssh-keydb-server.spec  ssh-keydb.conf
packaging/ssh-keydb-client-1.0/: ak-update  crontab  gitconfig  post-update  ssh-keydb-add-relay  ssh-keydb-post-update-relay
plugins/: __init__.py  generator.py  group.py  key.py  location.py  membership.py  permission.py  profile.py  role.py  server.py  user.py
rpmbuild/SPECS/: python-ssh-keydb-1.0-client.spec  python-ssh-keydb-1.0-server.spec  ssh-keydb-client.spec
ssh-keydb-www/: apply.xml  apply.xsl  basics.css  hostkey.xsl  index.py  main.xml  main.xsl  servers.css  servers.xsl  user.css  user.xml  user.xsl  users.xsl
ssh-keydb-www/img/: apply.xcf  hostkey.xcf  servers.xcf  users.xcf
ssh_keydb/: akcmp.py  controller.py  options.py  ssh_keydb.py
ssh_keydb/plugins/: __init__.py  discover.py  generator.py  group.py  help.py  key.py  location.py  membership.py  model.py  permission.py  profile.py  role.py  server.py  user.py
ssh_keydb/www/: users.css  users.xml
www/: apply.xsl  hostkey.xml  hostkey.xsl  index.py  main.xml  main.xsl  servers.xml  servers.xsl  user.xsl  users.xsl
