[project]
name = "ssh-keydb"
version = "1.0"
authors = [
  { name="Fabien Bouleau", email="fabien.bouleau@gmail.com" },
]
description = "SSH-KeyDB"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["ssh-keydb", "gplv3", "python"]

[project.urls]
Homepage = "https://github.com/fboule/ssh-keydb"
Issues = "https://github.com/fboule/ssh-keydb/issues"
